# headfirst_python

./: .gitignore  Pipfile  pyproject.toml  todos.txt
Chapter_1/: beer_bottles.py  odd_time.py
Chapter_2/: chapter_2.md  list_2.py  lists.py  slicer.py
Chapter_3/: chapter_3.md  vowels_dict.py  vowels_set.py
Chapter_4/: chapter_4.md  test_vsearch.py  vsearch.py
Chapter_4/mymodules/: setup.py  vsearch.py
Chapter_4/mymodules/vsearch.egg-info/: PKG-INFO
Chapter_5/: Chapter_5.md  hello_flask.py  vsearch4web.py
Chapter_6/: Chapter_6.md  Pipfile  read_write.py  todos.txt  vsearch4web.py
Chapter_7/: vsearch4web.py
Chapter_7/templates/: viewlog.html
Chapter_9/: Chapter_9.md  DBcm.py  vsearch4web.py
python_lists/: movie_lists.py  nester.py
